k8s/monitor/influxdb-deployment-fs.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitoring-influxdb
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: influxdb
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 5
            preference:
              matchExpressions:
              - key: role
                operator: In
                values:
                - master
          - weight: 1
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - physics
      containers:
      - name: influxdb
        image: registry.bst-1.cns.bstjpc.com:5000/k8s.gcr.io/heapster-influxdb-amd64:v1.3.3
        volumeMounts:
        - mountPath: /data
          name: influxdb-storage-pv
      volumes:
      - name: influxdb-storage-pv
        flexVolume:
          driver: srcb/cephfs
          options:
            monitors: 109.105.1.208:6789,109.105.1.209:6789,109.105.1.253:6789,109.105.1.254:6789,109.105.30.157:6789
            share: '/system_common/influxdb'
            authid: 'admin'
            mds: 'Data_Intelligence_Labfs'
            keyring: 'AQDeUgJbJgwNMhAAnzeW5LwQSwqMyWs7Zvl5cQ=='
