k8s/monitor/influxdb-deployment-pv.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitoring-influxdb
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: influxdb
    spec:
      containers:
      - name: influxdb
        image: registry.bst-1.cns.bstjpc.com:5000/k8s.gcr.io/heapster-influxdb-amd64:v1.3.3
        volumeMounts:
        - mountPath: /data
          name: influxdb-storage-pv
      volumes:
      - name: influxdb-storage-pv
        persistentVolumeClaim:
          claimName: influxdb-storage-claim
