k8s/monitor/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
#  annotations:
#    ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.org/ssl-backends: "monitoring-grafana"
#    kubernetes.io/ingress.allow-http: "true"
#    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: grafana-ingress
  namespace: kube-system
spec:
  rules:
  - host: grafana.gcloud.bst-1.cns.bstjpc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: 80
